--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,13 @@
 <html>
 
 <head>
-<title>Hello World!</title>
+    <title>My Web Page</title>
 </head>
 
-<body> This is my first html page.</body>
+<body>
+
+    Hello, world!
+<img src="https://media.giphy.com/media/gK6oSFUFoFwVq/giphy.gif">
+</body>
 
 </html>
